--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
             <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="styles.css">
     </head>
+
     <body>
         <header class="cabeçalho">
+            <div class=""
             <span class="cabeçalho_menu-hamburguer"></span>
             <img src="img/Logo.svg" alt="Logo da Alurabooks">
-            <a href="#"><img src="img/Favoritos.svg"></a>
-            <a href="#"><img src="img/Compras.svg"></a>
-            <a href="#"><img src="img/Usuario.svg"></a>
+            <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
+            <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
+            <a href="#"><img src="img/Usuario.svg" alt="Meu perfil"></a>
 
         </header>
     </body>
